--- a/user.html
+++ b/user.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="box">
-        <h1 class="title is-1">👤 User Form</h1>
-        <h2 class="subtitle is-3">Fill your data in this form v2</h2>
+        <h1 class="title is-1">🚘 Driver Form</h1>
+        <h2 class="subtitle is-3">Fill your data in this form</h2>
     </div>
     <div class="box my-6">
         <div class="field">
@@ -30,15 +30,13 @@
             <div class="control">
                 <input class="input" type="text" id="email" placeholder="Example: carlos@gmail.com">
             </div>
-        <!--
         </div>
         <div class="field">
-            <label class="label" for="telephone">Telephone:</label>
+            <label class="label" for="PhoneNumber">Phone Number:</label>
             <div class="control">
-                <input class="input" type="text" id="telephone" placeholder="Example: 4280936">
+                <input class="input" type="text" id="PhoneNumber" placeholder="Example: 69487589">
             </div>
         </div>
-        -->
         <div class="block">
             <button class="button is-primary is-meidum is-fullwidth mt-6" onclick="submitForm()">Submit</button>
         </div>
