--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                 <input class="input" type="text" id="email" placeholder="Example: carlos@gmail.com">
             </div>
         </div>
-        <div class="Hola">
-            <input class="input" type="text" id="hola bb" placeholder="Example: Holabb">
+        <div class="field">
+            <label class="label" for="PhoneNumber">Phone Number:</label>
+            <div class="control">
+                <input class="input" type="text" id="PhoneNumber" placeholder="Example: 69487589">
         </div>
         <div class="block">
             <button class="button is-primary is-meidum is-fullwidth mt-6" onclick="submitForm()">Submit</button>
