--- a/vehiculo.html
+++ b/vehiculo.html
@@ -48,7 +48,7 @@
             function getValues() {
                 return {
                     driverId: document.getElementById('driverId').value,
-                    modoelo: document.getElementById('modelo').value,
+                    modelo: document.getElementById('modelo').value,
                     marca: document.getElementById('marca').value,
                     anio: document.getElementById('anio').value,
                     placa: document.getElementById('placa').value,
